--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo": "~53.0.20",
     "expo-font": "~13.3.2",
     "expo-linking": "~7.1.7",
+    "expo-location": "^18.1.6",
     "expo-router": "~5.1.4",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
@@ -27,10 +28,15 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-geolocation-service": "^5.3.1",
+    "react-native-map-link": "^3.9.0",
+    "react-native-paper": "^5.14.5",
+    "react-native-qibla-compass": "^1.3.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "react-native-web": "~0.20.0"
+    "react-native-web": "~0.20.0",
+    "requests": "^0.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
