--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
     {
       "label": "Start IALFM App",
       "type": "shell",
-      "command": "npx expo start --clear",
+      "command": "npx expo start --clear --web",
       "group": "build",
       "isBackground": true,
       "problemMatcher": []
