--- a/app.json
+++ b/app.json
@@ -9,26 +9,26 @@
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "splash": {
-      "image": "./assets/images/splash-icon.png",
+      "image": "./assets/images/icon.png",
       "resizeMode": "contain",
       "backgroundColor": "#2E8B57"
     },
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "org.ialfm.app"
+      "bundleIdentifier": "maariz.ialfm.app"
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
+        "foregroundImage": "./assets/images/icon.png",
         "backgroundColor": "#2E8B57"
       },
       "edgeToEdgeEnabled": true,
-      "package": "org.ialfm.app"
+      "package": "maariz.ialfm.app"
     },
     "web": {
       "bundler": "metro",
       "output": "static",
-      "favicon": "./assets/images/favicon.png"
+      "favicon": "./assets/images/icon.png"
     },
     "plugins": ["expo-router"],
     "experiments": {
@@ -44,6 +44,12 @@
       "lewisville",
       "flower mound",
       "ialfm"
-    ]
+    ],
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "ae0acd0a-7a55-4381-9d63-966566171c3b"
+      }
+    }
   }
 }
