Add Events and Programs screens with detailed information and registration links
- Implement EventsScreen component to display community events with descriptions, timings, and registration information.
- Implement ProgramsScreen component to showcase educational programs, including registration options and program details.
- Update MenuScreen to include navigation links to the new Events and Programs screens.
- Create a new markdown file for app store related information.

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "IALFM - Islamic Association of Lewisville & Flower Mound",
+    "name": "IALFM",
     "slug": "ialfm-app",
     "version": "1.0.0",
     "orientation": "portrait",
@@ -15,7 +15,12 @@
     },
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "maariz.ialfm.app"
+      "bundleIdentifier": "maariz2.ialfm.app",
+      "infoPlist": {
+        "ITSAppUsesNonExemptEncryption": false,
+        "NSLocationWhenInUseUsageDescription": "We need your location to show prayer times.",
+        "NSLocationAlwaysAndWhenInUseUsageDescription": "We need your location to show prayer times."
+      }
     },
     "android": {
       "adaptiveIcon": {
