--- a/package.json
+++ b/package.json
@@ -29,13 +29,16 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-calendars": "1.1313.0",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-map-link": "^3.9.0",
     "react-native-paper": "^5.14.5",
     "react-native-qibla-compass": "^1.3.0",
     "react-native-reanimated": "~3.17.4",
+    "react-native-reanimated-carousel": "^4.0.2",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "15.11.2",
     "react-native-web": "~0.20.0",
     "requests": "^0.3.0"
@@ -43,6 +46,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
+    "@types/react-native-snap-carousel": "^3.8.11",
     "jest": "^29.2.1",
     "jest-expo": "~53.0.9",
     "react-test-renderer": "19.0.0",
