--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/native": "^7.1.6",
+    "@supabase/supabase-js": "^2.53.0",
     "expo": "~53.0.20",
     "expo-font": "~13.3.2",
     "expo-linking": "~7.1.7",
@@ -41,7 +42,8 @@
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "15.11.2",
     "react-native-web": "~0.20.0",
-    "requests": "^0.3.0"
+    "requests": "^0.3.0",
+    "supabase": "^2.33.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
