Refactor code structure for improved readability and maintainability

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "IALFM - Islamic Association of Lewisville & Flower Mound",
+    "name": "IALFM",
     "slug": "ialfm-app",
     "version": "1.0.0",
     "orientation": "portrait",
