--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/native": "^7.1.6",
     "expo": "~53.0.20",
+    "expo-calendar": "~14.1.4",
     "expo-font": "~13.3.2",
     "expo-linking": "~7.1.7",
     "expo-location": "^18.1.6",
@@ -29,8 +30,10 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-calendars": "^1.1313.0",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-map-link": "^3.9.0",
+    "react-native-netinfo": "^1.1.0",
     "react-native-paper": "^5.14.5",
     "react-native-qibla-compass": "^1.3.0",
     "react-native-reanimated": "~3.17.4",
