--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/native": "^7.1.6",
     "expo": "~53.0.20",
     "expo-calendar": "~14.1.4",
@@ -33,9 +34,7 @@
     "react-native-calendars": "^1.1313.0",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-map-link": "^3.9.0",
-    "react-native-netinfo": "^1.1.0",
     "react-native-paper": "^5.14.5",
-    "react-native-qibla-compass": "^1.3.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-reanimated-carousel": "^4.0.2",
     "react-native-safe-area-context": "5.4.0",
